Fix matching page vertical overflow

--- a/frontend/src/App.module.css
+++ b/frontend/src/App.module.css
@@ -19,7 +19,6 @@ select {
     background-color: #1b1f24;
     display: flex;
     flex-direction: column;
-    gap: 20px;
     padding: 0;
     margin: 0;
 }
