--- a/frontend/src/components/Navbar/Navbar.module.css
+++ b/frontend/src/components/Navbar/Navbar.module.css
@@ -4,11 +4,11 @@ nav {
     justify-content: flex-end;
     align-items: center;
     gap: 25px;
-    padding: 15px;
-    position: fixed;
-    top: 0;
-    left: 0;
+    height: 75px;
+    padding: 0 25px;
+    
     width: 100%;
+    margin: 0;
 }
 
 .navContent {
