--- a/frontend/src/views/main-page/MainPage.css
+++ b/frontend/src/views/main-page/MainPage.css
@@ -1,13 +1,14 @@
 .main-layout {
-    border-radius: 40px;
     display: flex;
     flex-direction: column;
     height: 100vh;
+    width: 100vw;
+    margin: 0;
+    padding: 0;
 }
 
 .content {
     flex: 1;
-    margin-top: 60px;
-    padding: 20px;
+    
     overflow-y: auto;
 }
