--- a/frontend/src/views/matching-page/MatchingPage.module.css
+++ b/frontend/src/views/matching-page/MatchingPage.module.css
@@ -2,9 +2,11 @@
     display: flex;
     flex-direction: row;
     width: 100vw;
-    height: 100vh;
+    height: calc(100vh - 75px);
     margin: 0;
     padding: 0;
+    display: grid;
+    grid-template-columns: 1fr 1fr; 
 }
 
 .leftSection {
@@ -14,6 +16,8 @@
     justify-content: center;
     align-items: center;
 }
+
+
 
 .matchingContainer {
     display: flex;
@@ -33,7 +37,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    margin: 20px;
+    margin: 0;
 }
 
 .heading {
@@ -46,6 +50,10 @@
 .difficultySection {
     margin-bottom: 20px;
     width: 100%
+}
+
+button {
+    border-radius: 15px;
 }
 
 .difficultyButtons {
